--- a/assets/i18n/ja-JP.json
+++ b/assets/i18n/ja-JP.json
@@ -1,20 +1,26 @@
 {
-  "Senka Calc": "戦果計算",
-  "Senka calculator": "戦果計算器",
-  "Please click the stats to update rankings": "戦果を更新するためランキングを訪問してください",
-  "Admiral　%s　": "　%s　提督",
-  "By:　%s　": "　%s　まで",
-  "Ranking": "順位",
-  "Rate": "戦果",
-  "Account time": "決済時",
-  "Before account": "決済まで",
-  "Accounted": "已決済",
-  "Refresh time": "更新時",
-  "Before refresh": "更新まで",
-  "Experience": "経験値",
-  "Increment": "増分",
-  "It will save when all rates is updated": "すべでのランキングを更新した後にセーブされます",
-  "Presumed rate": "推定戦果",
-  "Presumed experience": "推定経験値",
-  "Auto-set tips": "We will automatically set your ranking rate and current exp as the base rate & exp, but the ranking rate may not relate to your current exp."
+  "Ranking Calc": "戦果計算",
+  "Ranking point calculator": "戦果計算機",
+  "Calculator": "計算機",
+  "Target ranking points": "目標戦果",
+  "Excluded quests": "除外された任務",
+  "Remaining {{ points }} points": "残り {{ points }} 戦果",
+  "{{ points }} points over the target": "目標より {{ points }} 戦果が超過しています",
+  "Click to select quests": "クリックでクエストを選択する",
+  "Completed extra operations": "クリアしたEO",
+  "Remaining extra operations": "残りのEO",
+  "Completed quests": "クリアした任務",
+  "Remaining quests": "残りの任務",
+  "Calendar": "カレンダー",
+  "Ranking Info": "ランキング情報",
+  "Click the button and load ranking page to correct ranking point values": "このボタンをクリックし、ランキングページを読み込むと、ランキングポイント値が修正されます。",
+  "Rank": "ランキング",
+  "Point": "戦果",
+  "Last Update {{ date }}": "最終更新: {{ date }}",
+  "Current ranking points {{ point }}": "現在戦果: {{ point }}",
+  "Staging ranking points {{ point }}": "加算前戦果: {{ point }}",
+  "Ranking points of planned extra operations {{ point }}": "残りのEOの戦果: {{ point }}",
+  "Ranking points of planned quests {{ point }}": "残り任務の戦果: {{ point }}",
+  "Remaining ranking points to reach target {{ point }}": "目標戦果まで残り: {{ point }}",
+  "Target of ranking points {{ point }}": "目標戦果: {{ point }}"
 }
