--- a/assets/i18n/zh-CN.json
+++ b/assets/i18n/zh-CN.json
@@ -1,34 +1,26 @@
 {
-  "Senka Calc": "我变强了",
-  "Senka calculator": "战果计算器",
-  "Please click the stats to update rankings": "请浏览战绩表示以更新战果值",
-  "Admiral　%s　": "　%s　提督",
-  "By:　%s　": "截止至　%s　",
-  "Ranking": "顺位",
-  "Rate": "战果值",
-  "Account time": "结算时间",
-  "Before account": "距离结算",
-  "Refresh time": "刷新时间",
-  "Before refresh": "距离刷新",
-  "Experience": "经验值",
-  "Increment": "增值",
-  "It will save when all rates is updated": "更新完所有的战果值之后才会保存",
-  "Presumed rate": "推定战果",
-  "Presumed experience": "推定经验值",
-  "No Data": "数据缺失",
-  "Accounted": "已结算",
-  "EO map final time": "EO海图战果结算时间",
-  "Normal map final time": "普通海图战果结算时间",
-  "Click to show your rates this month": "点击查看本月战绩",
-  "Custom calc": "自定义计算值",
-  "Base Exp": "基础经验值",
-  "Use current exp": "使用当前经验值",
-  "Set rate": "设定战果值",
-  "Base Rate": "基础战果值",
-  "Use updated rate": "使用榜上的战果值",
-  "OK": "确定",
-  "Rank list": "榜单",
-  "History": "战绩",
-  "Auto-set the base value": "自动将榜上的战果值和读榜时的经验值设定为计算的基础战果值和经验值。",
-  "Auto-set tips": "由于 API 的原因，目前无法获取战果结算时的提督经验值(无法获取到榜单上的战果值对应的经验值)。只能根据读榜时的经验值进行计算，得出的战果值总值与实际战果总值可能存在误差。"
+  "Ranking Calc": "战果计算",
+  "Ranking point calculator": "战果计算器",
+  "Calculator": "计算器",
+  "Target ranking points": "目标战果",
+  "Excluded quests": "除外任务",
+  "Remaining {{ points }} points": "剩余 {{ points }} 战果",
+  "{{ points }} points over the target": "超过 {{ points }} 战果",
+  "Click to select quests": "点击以选择任务",
+  "Completed extra operations": "已完成 EO",
+  "Remaining extra operations": "未完成 EO",
+  "Completed quests": "已完成任务",
+  "Remaining quests": "未完成任务",
+  "Calendar": "日历",
+  "Ranking Info": "战果信息",
+  "Click the button and load ranking page to correct ranking point values": "点击按钮并进入排名页面以修正战果",
+  "Rank": "顺位",
+  "Point": "战果",
+  "Last Update {{ date }}": "最终更新: {{ date }}",
+  "Current ranking points {{ point }}": "现在战果: {{ point }}",
+  "Staging ranking points {{ point }}": "结算前战果: {{ point }}",
+  "Ranking points of planned extra operations {{ point }}": "未完成 EO 战果: {{ point }}",
+  "Ranking points of planned quests {{ point }}": "未完成任务战果: {{ point }}",
+  "Remaining ranking points to reach target {{ point }}": "剩余战果: {{ point }}",
+  "Target of ranking points {{ point }}": "目标战果: {{ point }}"
 }
