--- a/assets/i18n/zh-TW.json
+++ b/assets/i18n/zh-TW.json
@@ -1,25 +1,26 @@
 {
-  "Senka Calc": "戰果計算",
-  "Senka calculator": "戰果計算器",
-  "Please click the stats to update rankings": "請瀏覽戰績表示以更新戰果值",
-  "Admiral　%s　": "　%s　提督",
-  "By:　%s　": "截止至　%s　",
-  "Ranking": "順位",
-  "Rate": "戰果值",
-  "Account time": "結算時間",
-  "Before account": "距離結算",
-  "Refresh time": "刷新時間",
-  "Before refresh": "距離刷新",
-  "Experience": "經驗值",
-  "Increment": "增值",
-  "It will save when all rates is updated": "更新完所有的戰果值之後才會儲存",
-  "Presumed rate": "推定戰果",
-  "Presumed experience": "推定經驗值",
-  "No Data": "資料缺失",
-  "Accounted": "已結算",
-  "EO map final time": "EO海圖戰果結算時間",
-  "Normal map final time": "普通海圖戰果結算時間",
-  "Click to show your rates this month": "點選檢視本月戰績",
-  "Auto-set the base value": "自动将榜上的战果值和读榜时的经验值设定为计算的基础战果值和经验值。",
-  "Auto-set tips": "由于 API 的原因，目前无法获取战果结算时的提督经验值(无法获取到榜单上的战果值对应的经验值)。只能根据读榜时的经验值进行计算，得出的战果值总值与实际战果总值可能存在误差。"
+  "Ranking Calc": "戰果計算",
+  "Ranking point calculator": "戰果計算器",
+  "Calculator": "計算器",
+  "Target ranking points": "目標戰果",
+  "Excluded quests": "除外任務",
+  "Remaining {{ points }} points": "剩餘 {{ points }} 戰果",
+  "{{ points }} points over the target": "超過 {{ points }} 戰果",
+  "Click to select quests": "點選以選擇任務",
+  "Completed extra operations": "已完成 EO",
+  "Remaining extra operations": "未完成 EO",
+  "Completed quests": "已完成任務",
+  "Remaining quests": "未完成任務",
+  "Calendar": "日曆",
+  "Ranking Info": "戰果資訊",
+  "Click the button and load ranking page to correct ranking point values": "點選按鈕並進入排名頁面以修正戰果",
+  "Rank": "順位",
+  "Point": "戰果",
+  "Last Update {{ date }}": "最終更新: {{ date }}",
+  "Current ranking points {{ point }}": "現在戰果: {{ point }}",
+  "Staging ranking points {{ point }}": "結算前戰果: {{ point }}",
+  "Ranking points of planned extra operations {{ point }}": "未完成 EO 戰果: {{ point }}",
+  "Ranking points of planned quests {{ point }}": "未完成任務戰果: {{ point }}",
+  "Remaining ranking points to reach target {{ point }}": "剩餘戰果: {{ point }}",
+  "Target of ranking points {{ point }}": "目標戰果: {{ point }}"
 }
